<?xml version="1.0"?>
<package format="3">
  <name>ouster_description</name>
  <version>0.1.0</version>
  <description>Ouster OS1-64 test and simulation support</description>

  <maintainer email="sweunwave@knu.ac.kr">Seung Woo EUN</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
