<?xml version="1.0"?>
<package format="3">
  <name>ouster_gazebo_plugins</name>
  <version>1.0.7</version>
  <description>Gazebo plugin to provide Ouster simulation.</description>

  <maintainer email="sweunwave@knu.ac.kr">Seung Woo EUN</maintainer>
  <license>BSD</license>

  <author email="sweunwave@knu.ac.kr">Seung Woo EUN</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
